--- a/test.html
+++ b/test.html
@@ -1,8 +1,28 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<script
-			type="application/javascript"
-			src="./kurse.deploy.js">
-		</script>
+		<title>kurse unit test</title>
+
+		<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.3.2.css">
+
+		<script type="application/javascript" src="https://code.jquery.com/qunit/qunit-2.3.2.js"></script>
+
+		<script type="application/javascript" src="./kurse.deploy.js"></script>
+
+		<script type="application/javascript" src="./bower_components/mrkd/mrkd.deploy.js"></script>
 	</head>
+
+	<body>
+		<div id="qunit"></div>
+
+		<div id="qunit-fixture"></div>
+
+		<script type="application/javascript">
+			QUnit.test( "kurse unit test", function( assert ) {
+
+				assert.equal( mrkd( Symbol( "id" ), kurse( { "name": "simple" } ) ), true, "should be equal" );
+
+			} );
+		</script>
+	</body>
 </html>
