--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
 		<script type="application/javascript">
 			QUnit.test( "kurse unit test", function( assert ) {
 
-				assert.equal( mrkd( Symbol( "id" ), kurse( { "name": "simple" } ) ), true, "should be equal" );
+				assert.equal( mrkd( Symbol( "id" ), kurse( { "name": "simple" } ) ), true, "should be equal to true" );
 
 			} );
 		</script>
