--- a/test.html
+++ b/test.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>kurse unit test</title>
+		<meta charset="utf-8">
 
-		<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.3.2.css">
+		<title>test:kurse</title>
 
-		<script type="application/javascript" src="https://code.jquery.com/qunit/qunit-2.3.2.js"></script>
-
-		<script type="application/javascript" src="./kurse.deploy.js"></script>
-
-		<script type="application/javascript" src="./bower_components/mrkd/mrkd.deploy.js"></script>
+		<link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css"/>
 	</head>
 
 	<body>
-		<div id="qunit"></div>
+		<div id="mocha"></div>
 
-		<div id="qunit-fixture"></div>
+		<script type="application/javascript" src="https://unpkg.com/mocha/mocha.js"></script>
 
 		<script type="application/javascript">
-			QUnit.test( "kurse unit test", function( assert ) {
+			mocha.setup( "bdd" );
+		</script>
 
-				assert.equal( mrkd( Symbol( "id" ), kurse( { "name": "simple" } ) ), true, "should be equal" );
+		<script type="application/javascript" src="./test.deploy.js"></script>
 
-			} );
+		<script type="application/javascript">
+			mocha.run( );
 		</script>
 	</body>
 </html>
