--- a/bridge.html
+++ b/bridge.html
@@ -5,7 +5,8 @@
 
 		<title>bridge:kurse</title>
 
-
 		<script type="application/javascript" src="./kurse.deploy.js"></script>
+
+		<script type="application/javascript" src="https://unpkg.com/mrkd/mrkd.deploy.js"></script>
 	</head>
 </html>
