--- a/test.html
+++ b/test.html
@@ -12,6 +12,7 @@
 		<div id="mocha"></div>
 
 		<script type="application/javascript" src="https://unpkg.com/mocha/mocha.js"></script>
+		<script type="application/javascript" src="https://unpkg.com/mrkd/mrkd.deploy.js"></script>
 
 		<script type="application/javascript">
 			mocha.setup( "bdd" );
